service.yaml
apiVersion: v1
kind: Service

metadata:
  name: cloudops-service

spec:
  type: NodePort

  selector:
    app: cloudops-node-api

  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
      nodePort: 30080
