ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: cloudops-ingress

spec:
  ingressClassName: traefik

  rules:
  - host: cloudops-project.duckdns.org

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: cloudops-service

            port:
              number: 4000
